Bug 1439529 - Same resolution is also feasible. r=jib a=lizzard

MozReview-Commit-ID: F9DGzgr7pCN